--- a/base_eeg_docker_files/requirements.txt
+++ b/base_eeg_docker_files/requirements.txt
@@ -45,6 +45,7 @@ Markdown==3.3.3
 MarkupSafe==1.1.1
 mistune==0.8.4
 mne==0.22.0
+mne-bids==0.7
 nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.1.2
@@ -69,6 +70,7 @@ prov==2.0.0
 ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pybv==0.5.0
 pycparser==2.20
 pydot==1.4.1
 Pygments==2.7.4
