--- a/base_eeg_docker_files/environment.yml
+++ b/base_eeg_docker_files/environment.yml
@@ -14,7 +14,8 @@ dependencies:
 - h5py==3.1.0
 - pillow==8.1.2
 - statsmodels==0.12.2
-- jupyter==1.0.0
+- ipympl==0.7.0
+- jupyterlab==3.0.14
 - joblib==1.0.1
 - psutil==5.8.0
 - numexpr==2.7.3
