--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,15 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# IDE specific 
 .idea
-/base_eeg/.vscode
-../.vscode/
-.vscode/
+.vscode
+
+# OS specific 
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
