--- a/container/environment.yml
+++ b/container/environment.yml
@@ -3,6 +3,7 @@ channels:
 - conda-forge
 dependencies:
 - python==3.9.2
+- pytest==3.05
 - pip==21.0.1
 - numpy==1.20.2
 - scipy==1.6.2
@@ -43,3 +44,4 @@ dependencies:
   - autoreject==0.2.1
   - mne-bids==0.7
   - pybv==0.5.0
+  - pathlib==1.0.1
