--- a/container/requirements.txt
+++ b/container/requirements.txt
@@ -147,7 +147,6 @@ pyflakes==2.2.0
 Pygments==2.8.1
 pylint==2.6.0
 PyNaCl==1.4.0
-pyodbc==4.0.31
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pyreadline==2.1
@@ -164,7 +163,6 @@ pytz==2020.1
 pyvista==0.29.0
 pyvistaqt==0.3.0
 PyWavelets==1.1.1
-pywin32==300
 pywin32-ctypes==0.2.0
 pywinpty==0.5.7
 PyYAML==5.3.1
@@ -176,18 +174,17 @@ QtPy==1.9.0
 regex==2020.11.13
 requests==2.25.1
 rope==0.18.0
-Rtree==0.9.4
 ruamel-yaml==0.15.87
 scikit-image==0.17.2
 scikit-learn==0.23.2
 scipy==1.5.2
 seaborn==0.11.0
 Send2Trash==1.5.0
-setuptools==50.3.1.post20201107
+setuptools==50.3.1
 simplegeneric==0.8.1
 simplejson==3.17.2
 singledispatch==3.4.0.3
-sip==4.19.13
+sip==6.1.1
 six==1.15.0
 snowballstemmer==2.0.0
 sortedcollections==1.2.1
@@ -239,7 +236,6 @@ wincertstore==0.2
 wrapt==1.12.1
 xlrd==1.2.0
 XlsxWriter==1.3.7
-xlwings==0.20.8
 xlwt==1.3.0
 xmltodict==0.12.0
 yapf==0.30.0
