Pruned docker file of non-relevant tools

--- a/containers/docker/Dockerfile
+++ b/containers/docker/Dockerfile
@@ -10,16 +10,11 @@ RUN apt-get update && apt-get -y upgrade\
  git \
  git-core \
  golang \
- htop \
  locales \
- man \
- nmap \
  python3-pip \
  ruby-full \
- strace \
  sudo \
- tig \
- vim \
+ nano \
  wget
 
 RUN locale-gen en_US.UTF-8
