--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,16 +12,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: ndclab/pepper_container:szegedi-1.0.0
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 notebook
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run tests with pytest
         run: pytest 
