--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,5 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     container: ndclab/pepper_container:szegedi-1.0.0
     steps:
-      - name: Run tests with pytest
+      - name: Activate pipe and run pytest
+        run: conda activate pipe 
         run: sudo pytest 
