--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -10,11 +10,11 @@ on:
       - dev
 
 jobs:
-  build:
+  container-test:
     runs-on: ubuntu-latest
     container: ndclab/pepper_container:szegedi-1.0.0
     steps:
       - name: Activate pipe conda env
-        run: conda activate pipe 
-      - name: Pytest
-        run: pytest
+        run: $CONDA/bin/conda activate pipe 
+      - name: Run pytest
+        run: pytest scripts/tests/
