Added list to verify current env

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -20,5 +20,7 @@ jobs:
         run: conda env list
       - name: Activate pipe conda environment
         run: /opt/conda/bin/activate pipe
+      - name: Verify pipe environment
+        run: conda env list
       - name: Run pytest
         run: pytest scripts/tests/
