--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,8 +16,8 @@ jobs:
     steps:
       - name: List conda info on container
         run: conda info 
-      - name: Initialize shell
-        run: . /opt/conda/etc/profile.d/conda.sh
+      - name: Initialize and restart shell
+        run: conda init "$SHELL" && exec "$SHELL"
       - name: Activate pipe conda environment
         run: conda activate pipe
       - name: Verify pipe environment
