Removed conda init

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,10 +16,8 @@ jobs:
     steps:
       - name: List conda info on container
         run: conda info 
-      - name: Init conda
-        run: eval "$(conda shell.bash hook)"
       - name: Activate pipe conda environment
-        run: conda activate pipe
+        run: . activate pipe
       - name: Verify pipe environment
         run: conda env list
       - name: Run pytest
