--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,7 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     container: ndclab/pepper_container:szegedi-1.0.0
     steps:
-      - name: List dir
-        run: ls && pwd
+      - name: Set permissions for docker container
+        run: chmod +x "${GITHUB_WORKSPACE}/containers/docker/init_docker.cmd"
+      - name: Copy in data to docker container
+        run: "${GITHUB_WORKSPACE}/containers/docker/init_docker.cmd"
       - name: Run pytest in conda env
         run: conda run -n pipe pytest scripts/tests/
