--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,8 +15,8 @@ jobs:
     container: ndclab/pepper_container:szegedi-1.0.0
     steps:
       - name: Set permissions for docker container
-        run: chmod +x "${GITHUB_WORKSPACE}/containers/docker/init_docker.cmd"
+        run: chmod +x "/__w/pepper-pipeline/containers/docker/init_docker.cmd"
       - name: Copy in data to docker container
-        run: "${GITHUB_WORKSPACE}/containers/docker/init_docker.cmd"
+        run: "/__w/pepper-pipeline/containers/docker/init_docker.cmd"
       - name: Run pytest in conda env
         run: conda run -n pipe pytest scripts/tests/
