Renamed user_params to input_config

--- a/input_config.json
+++ b/input_config.json
@@ -1,12 +1,9 @@
 {
     "load_data": {
         "root": "CMI/rawdata",
-        "subjects": [
-            "*"
-        ],
-        "tasks": [
-            "*"
-        ],
+        "output_root": "CMI",
+        "subjects": ["*"],
+        "tasks": ["*"],
         "exceptions": {
             "subjects": "",
             "tasks": "",
@@ -49,7 +46,14 @@
         },
         "reref_raw": {}
     },
-    "output_data": {
-        "root": "CMI"
+    "postprocess": {
+        "measures": {
+            "erp": {
+                "tmin": 100, 
+                "tmax": 150, 
+                "channel": "Pz"
+            },
+        "metrics": ["sme", "split_half", "mean"]
+        }
     }
 }
