copy run.py into projects

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -20,7 +20,9 @@ jobs:
         run: docker images
       - name: Run docker container in detached mode
         run: docker run -t -d --name pepper ndclab/pepper_container:szegedi-1.0.0
-      - name: Copy files into docker container
+      - name: Copy scripts into docker container
         run: docker cp scripts/ pepper:/projects
+      - name: Copy driver script into docker container
+        run: docker cp run.py pepper:/projects
       - name: Run pytest in docker 
         run: docker exec pepper conda run -n pipe pytest
